toolbar improvements and journal flow for thread

--- a/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
+++ b/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
@@ -6,7 +6,7 @@
         recordId="{!v.recordId}"
         objectApiName="{!v.sObjectName}"
         singleThread="{!v.singleThread}"
-        ontoolbaraction="{!c.handleToolbarAction}"
+        onsto_toolbaraction="{!c.handleToolbarAction}"
     ></c:crmStoMessaging>
 
     <aura:if isTrue="{!v.showPanel}">
