--- a/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
+++ b/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
@@ -35,7 +35,7 @@
                         style="border-radius: 0.3em"
                         id="modal-content-id-1"
                     >
-                        <lightning:flow aura:id="panelFlow" />
+                        <lightning:flow aura:id="panelFlow" onstatuschange="{!c.handleFlowStatusChange}" />
                     </div>
                 </div>
             </section>
