Updated STO Categories

--- a/force-app/main/default/layouts/STO_Category__mdt-STO_Category Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/STO_Category__mdt-STO_Category Layout.layout-meta.xml
@@ -29,8 +29,16 @@
                 <field>IsProtected</field>
             </layoutItems>
             <layoutItems>
+                <behavior>Edit</behavior>
+                <field>STO_Sort_Order__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Required</behavior>
                 <field>NamespacePrefix</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>STO_Description__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
@@ -70,7 +78,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h3N000002cIw6</masterLabel>
+        <masterLabel>00h1j0000021EV9</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
