Moves transfer to complete flow and renames header

--- a/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
+++ b/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
@@ -1,11 +1,13 @@
 <aura:component implements="force:hasRecordId, force:hasSObjectName, flexipage:availableForAllPageTypes">
     <aura:attribute name="showPanel" type="Boolean" default="false"></aura:attribute>
     <aura:attribute name="singleThread" type="Boolean" default="true"></aura:attribute>
+    <aura:attribute name="cardTitle" type="String"></aura:attribute>
 
     <c:crmStoMessaging
         recordId="{!v.recordId}"
         objectApiName="{!v.sObjectName}"
         singleThread="{!v.singleThread}"
+        cardTitle="{!v.cardTitle}"
         onsto_toolbaraction="{!c.handleToolbarAction}"
     ></c:crmStoMessaging>
 
