--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
@@ -14,3 +14,10 @@
 .inboxwrapper{
     margin-bottom: 3rem;
 }
+.body{
+    font-family: var(--navds-font-family);
+    line-height: 1.375;
+    color: var(--navds-color-text-primary);
+    font-size: 1.125rem;
+    text-align: center;
+}
