--- a/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.css
+++ b/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.css
@@ -1,24 +1,38 @@
-.link-header{
-    width:100%;
-    display:block;
+.link-header {
+    width: 100%;
+    display: block;
 }
-.lenkepanel__heading{
+.lenkepanel__heading {
     text-align: left;
 }
-.expandable-body{
-    width:100%;
-    display:block;
+.expandable-body {
+    width: 100%;
+    display: block;
     margin-top: 2em;
 }
-.hoved-panel{
-    display: block!important;
+.hoved-panel {
+    display: block !important;
+    border-radius: 0 !important;
+    border: none;
+    border-bottom: solid #3385d1;
 }
-.chevronboks{
+.hoved-panel .link-header * {
+    color: #3b72c1 !important;
+}
+.hoved-panel--aktiv {
+    background-color: #cce1f3 !important;
+}
+
+.hoved-panel:hover {
+    box-shadow: 0px 0px !important;
+}
+
+.chevronboks {
     margin-top: 1em;
 }
-.typo-normal{
+.typo-normal {
     text-align: left;
 }
-.lenkepanel{
-    width:100%;
+.lenkepanel {
+    width: 100%;
 }
