Fixes button size for mobile in terms modal

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
@@ -2,7 +2,6 @@
     text-align: center;
     width: 100%;
     margin-bottom: 1em;
-   
 }
 .text-center {
     text-align: center;
@@ -33,25 +32,31 @@
     top: 1rem;
     right: 1rem;
 }
-.sendbutton{
+.sendbutton {
     margin-top: 1em;
+    justify-content: center;
 }
-.logo{
-    margin:1em;
+.logo {
+    margin: 1em;
 }
-.typo-undertittel{
-    color: #0067C5;
+.typo-undertittel {
+    color: #0067c5;
     margin-bottom: 2em;
 }
-.descholder{
+.descholder {
     margin-top: 1em;
 }
-.skjemaelement{
+.skjemaelement {
     margin-top: 1em;
 }
 :host {
     --sds-c-textarea-sizing-min-height: 150px;
- }
- .decorator-wrapper{
-     margin-bottom: 4em;
- }
+}
+.decorator-wrapper {
+    margin-bottom: 4em;
+}
+
+.knapp-width {
+    justify-content: center;
+    width: 14em;
+}
