--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
@@ -73,3 +73,18 @@
 .feilBoks {
     border: var(--navds-global-color-nav-red) solid 3px;
 }
+
+.checkbox {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    justify-items: center;
+}
+
+.checkbox c-community-checkbox {
+    grid-column: 2;
+}
+
+.vilkar-link {
+    align-self: end;
+    justify-self: start;
+}
