--- a/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
+++ b/force-app/main/default/aura/crmStoMessagingContainer/crmStoMessagingContainer.cmp
@@ -12,7 +12,7 @@
     ></c:crmStoMessaging>
 
     <aura:if isTrue="{!v.showPanel}">
-        <div>
+        <div onkeyup="{!c.handleModalKey}">
             <section
                 role="dialog"
                 tabindex="-1"
@@ -23,9 +23,11 @@
             >
                 <div class="slds-modal__container">
                     <header class="slds-is-relative">
+                        <div tabindex="0" class="firstfocusable" aura:id="firstfocusable"></div>
                         <button
                             class="slds-button slds-button_icon slds-modal__close slds-button_icon-inverse"
                             title="Close"
+                            aura:id="focusElement"
                             onclick="{!c.closeModal}"
                         >
                             <lightning:icon iconName="utility:close" variant="inverse" size="small"> </lightning:icon>
@@ -42,6 +44,7 @@
                 </div>
             </section>
             <div class="slds-backdrop slds-backdrop_open"></div>
+            <div tabindex="0" class="lastfocusable"></div>
         </div>
     </aura:if>
 </aura:component>
