--- a/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
+++ b/force-app/main/default/lwc/communityConversationNote/communityConversationNote.css
@@ -3,15 +3,16 @@
     margin-bottom: 3rem;
 }
 
-.panel {
+.panel-custom {
     background-color: #fff;
     display: block;
     border-radius: 4px;
-    padding: 1rem; 
+    padding: 2.5rem;
+    padding-bottom: 0px;
     font-size: 1.125rem;
 }
 
-.wrapper{
+.wrapper {
     margin-top: 3rem;
     margin-bottom: 3rem;
 }
@@ -22,5 +23,17 @@
 
 .inline-block {
     display: block;
-    padding-bottom: .5rem;
+    padding-bottom: 0.5rem;
+}
+
+.grey-border {
+    border-color: #b0b0b0;
+}
+
+.thick {
+    font-weight: bold;
+}
+
+.big-gap {
+    padding-bottom: 4.5rem;
 }
