fix external icon background circles

--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
@@ -26,3 +26,9 @@
     width: 65%;
     margin: auto;
 }
+
+@media only screen and (max-width: 1023px) {
+    .mobil-padding {
+        padding-left: 1rem;
+    }
+}
