--- a/force-app/main/default/aura/stoBackgroundTabUpdator/stoBackgroundTabUpdator.cmp
+++ b/force-app/main/default/aura/stoBackgroundTabUpdator/stoBackgroundTabUpdator.cmp
@@ -1,7 +1,8 @@
-<aura:component implements="lightning:backgroundUtilityItem, flexipage:availableForAllPageTypes" access="global"
-    controller="stoUtilityBackgroundController">
-    <lightning:omniToolkitAPI aura:id="omniToolkit" />
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
+<aura:component
+    implements="lightning:backgroundUtilityItem, flexipage:availableForAllPageTypes"
+    access="global"
+    controller="stoUtilityBackgroundController"
+>
     <aura:handler event="lightning:tabCreated" action="{! c.onTabCreated }" />
     <lightning:workspaceAPI aura:id="workspace" />
 </aura:component>
