--- a/force-app/main/default/aura/stoBackgroundTabUpdator/stoBackgroundTabUpdator.cmp
+++ b/force-app/main/default/aura/stoBackgroundTabUpdator/stoBackgroundTabUpdator.cmp
@@ -3,6 +3,8 @@
     access="global"
     controller="stoUtilityBackgroundController"
 >
+    <lightning:omniToolkitAPI aura:id="omniToolkit" />
+    <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
     <aura:handler event="lightning:tabCreated" action="{! c.onTabCreated }" />
     <lightning:workspaceAPI aura:id="workspace" />
 </aura:component>
