--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -1,7 +1,7 @@
 .typo-undertittel {
 }
 .dialog {
-    margin-bottom: 3px !important;
+    margin-bottom: 8px !important;
 }
 .unread {
     border-style: hidden hidden hidden solid;
@@ -54,5 +54,13 @@
 @media only screen and (max-width: 480px) {
     .hideMobile {
         display: none;
+    }
+
+    .dialog {
+        padding-bottom: var(--override-padding-bottom-mobile, 1rem) !important;
+    }
+
+    .threeLinesMobile {
+        min-height: 4.125em;
     }
 }
