--- a/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
+++ b/force-app/main/default/lwc/stoMessageInboxItem/stoMessageInboxItem.css
@@ -61,6 +61,9 @@
     }
 
     .threeLinesMobile {
-        min-height: 4.125em;
+        -webkit-line-clamp: 3;
+    }
+    .mobilePadding {
+        padding-left: 0.5rem;
     }
 }
