--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
@@ -84,9 +84,10 @@
 }
 
 .vilkar-link {
-    align-self: end;
+    align-self: start;
     justify-self: start;
     border: 0px;
+    margin-top: 12px;
 }
 
 .override {
@@ -100,4 +101,32 @@
 
 .topGap {
     margin-top: 16px;
+}
+
+.topBigGap {
+    margin-top: 32px;
+}
+
+.btnPositioning {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+@media only screen and (max-width: 480px) {
+    .textLeftAlign-mobile {
+        text-align: left;
+    }
+
+    .leftMargin-mobile {
+        margin-left: 16px !important;
+    }
+
+    .btnPositioning {
+        display: block;
+    }
+
+    .btnPositioning > *:first-child {
+        margin-bottom: 16px;
+    }
 }
