--- a/force-app/main/default/lwc/navButton/navButton.css
+++ b/force-app/main/default/lwc/navButton/navButton.css
@@ -1,3 +1,5 @@
-a:hover {
+a:hover,
+a:focus {
+    background-color: var(--navds-button-color-primary-background);
     color: var(--navds-button-color-primary-text);
 }
