--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.css
@@ -25,6 +25,10 @@
     margin: auto;
 }
 
+.aroundGap {
+    margin: 1rem;
+}
+
 @media only screen and (max-width: 1023px) {
     .mobil-padding {
         padding-left: 1rem;
