Update BTO_News__mdt-BTO News Layout.layout-meta.xml

--- a/force-app/main/default/layouts/BTO_News__mdt-BTO News Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/BTO_News__mdt-BTO News Layout.layout-meta.xml
@@ -24,7 +24,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>BTO_header__c</field>
+                <field>BTO_Header__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
