--- a/force-app/main/default/lwc/navButton/navButton.css
+++ b/force-app/main/default/lwc/navButton/navButton.css
@@ -1,5 +1,5 @@
-a:hover,
-a:focus {
-    background-color: var(--navds-button-color-primary-background);
-    color: var(--navds-button-color-primary-text);
+.navds-button:hover,
+:focus {
+    text-decoration: unset;
+    color: white;
 }
