Fix spinner focus styling

--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
@@ -96,7 +96,7 @@
 }
 
 .vilkar-link:active,
-:focus {
+.vilkar-link:focus {
     background-color: var(--ac-link-active-bg, var(--a-border-focus));
     box-shadow: 0 0 0 2px var(--ac-link-active-border, var(--a-border-focus));
 }
