--- a/force-app/main/default/aura/amplitudeBackground/amplitudeBackground.cmp
+++ b/force-app/main/default/aura/amplitudeBackground/amplitudeBackground.cmp
@@ -4,6 +4,7 @@
     <c:amplitude aura:id="amplitude" />
 
     <aura:attribute name="recordIdMap" type="Object" />
+    <aura:attribute name="recordId" type="String" />
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}" />
 
