--- a/force-app/main/default/aura/amplitudeBackground/amplitudeBackground.cmp
+++ b/force-app/main/default/aura/amplitudeBackground/amplitudeBackground.cmp
@@ -1,5 +1,5 @@
 <aura:component implements="flexipage:availableForAllPageTypes" controller="AmplitudeHelper">
-    <ltng:require scripts="{!$Resource.Amplitude + '/Amplitude.js'}" />
+    <ltng:require scripts="{!$Resource.Amplitude + '/Amplitude.js'}" afterScriptsLoaded="{!c.reloadAmplitude}" />
     <c:nksGetStoUtility aura:id="stoUtility"></c:nksGetStoUtility>
     <c:amplitude aura:id="amplitude" />
 
@@ -11,5 +11,5 @@
     <lightning:workspaceAPI aura:id="workspace" />
     <aura:handler event="lightning:tabFocused" action="{! c.onTabFocused }" />
 
-    <lightning:messageChannel type="amplitude__c" onMessage="{!c.logMessage}" scope="APPLICATION" />
+    <lightning:messageChannel type="amplitude__c" onMessage="{!c.onLogMessage}" scope="APPLICATION" />
 </aura:component>
