Change prefix and sharing

--- a/force-app/main/default/layouts/CRM_FAQ__c-CRM_FAQ Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/CRM_FAQ__c-CRM_FAQ Layout.layout-meta.xml
@@ -23,7 +23,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>STO_Category__c</field>
+                <field>CRM_Category__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
