Adds Ordering and Translations

--- a/force-app/main/default/layouts/CRM_FAQ__c-CRM_FAQ Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/CRM_FAQ__c-CRM_FAQ Layout.layout-meta.xml
@@ -15,6 +15,10 @@
                 <behavior>Edit</behavior>
                 <field>CRM_Content__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CRM_Ordering__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
