Add new child button

--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.css
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.css
@@ -12,6 +12,14 @@
     text-align: start;
 }
 
+.addMargin {
+    margin-left: 20px;
+}
+
+.removeMargin {
+    margin-left: -15px;
+}
+
 .descholder {
     margin-top: 1em;
 }
