--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.css
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.css
@@ -25,5 +25,10 @@
 }
 
 .childWrap > *:not(:last-child) {
-    border-bottom: dashed 1px #000;
+    border-bottom: solid 1px #000000;
+}
+
+.spacing {
+    padding-bottom: 20px;
+    margin-top: 20px;
 }
