--- a/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.css
+++ b/force-app/main/default/lwc/nksFedrekvotesaken/nksFedrekvotesaken.css
@@ -32,3 +32,16 @@
     padding-bottom: 20px;
     margin-top: 20px;
 }
+
+.sizeAround {
+    background-color: #fff;
+    display: block;
+    padding: 1rem 1rem 1rem 1rem;
+    border-radius: 4px;
+}
+
+@media screen and (min-height: 480px) {
+    .sizeAround {
+        padding-left: 0px;
+    }
+}
