--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.css
@@ -150,3 +150,11 @@
 .testClass:focus {
     background: initial;
 }
+
+.largePadding {
+    padding-bottom: 3.5em;
+}
+
+.infocontainer {
+    margin-top: 2em;
+}
