--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
@@ -24,7 +24,7 @@
     --slds-c-button-brand-color-border: #66a5f4;
 }
 
-.active {
+[data-expanded='true'] {
     --slds-c-button-outline-brand-color-background: #cce1ff;
     --slds-c-button-outline-brand-color-border: #0056b4;
     --slds-c-button-outline-brand-color-background-hover: #cce1ff;
