changed top buttons color

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
@@ -1,27 +1,13 @@
-.button,
-.redactButton {
+.button {
     display: grid;
     width: 100%;
-}
-
-.button {
-    --slds-c-button-brand-color-background: #549fa4;
-    --slds-c-button-brand-color-background-hover: #549fa4;
-    --slds-c-button-brand-color-background-active: #549fa4;
-    --slds-c-button-brand-color-border: #549fa4;
-    --slds-c-button-brand-color-border-hover: #549fa4;
-    --slds-c-button-brand-color-border-active: #549fa4;
-}
-
-.border {
-    border-width: 2px;
-}
-
-.redactButton {
-    --slds-c-button-brand-color-background: #66a5f4;
+    --slds-c-button-brand-color-background: #99c3ff;
     --slds-c-button-brand-color-background-hover: #66a5f4;
     --slds-c-button-brand-color-background-active: #66a5f4;
-    --slds-c-button-brand-color-border: #66a5f4;
+    --slds-c-button-brand-color-border: #99c3ff;
+    --slds-c-button-brand-text-color: black;
+    --slds-c-button-brand-text-color-active: black;
+    --slds-c-button-brand-text-color-hover: black;
 }
 
 [data-expanded='true'] {
