--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
@@ -1,6 +1,4 @@
-.button {
-    display: grid;
-    width: 100%;
+.top-button {
     --slds-c-button-brand-color-background: #99c3ff;
     --slds-c-button-brand-color-border: #99c3ff;
     --slds-c-button-brand-color-background-hover: #66a5f4;
@@ -14,8 +12,12 @@
 [data-expanded='true'] {
     --slds-c-button-outline-brand-color-background: #cce1ff;
     --slds-c-button-outline-brand-color-border: #0056b4;
+}
+
+.bottom-button {
     --slds-c-button-outline-brand-color-background-hover: #cce1ff;
     --slds-c-button-outline-brand-color-background-active: #cce1ff;
+    --slds-c-button-outline-brand-color-border-hover: #0056b4;
 }
 
 .flowButton:last-child {
