show message if thread is null

--- a/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.css
+++ b/force-app/main/default/lwc/crmStoMessaging/newDesignTemplate.css
@@ -10,3 +10,9 @@
 .greenHeader {
     --overwrite-header-color: #ccf1d6;
 }
+
+.threadNotFound {
+    justify-content: center;
+    font-size: 1.5rem;
+    margin: 2rem;
+}
