--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
@@ -20,12 +20,12 @@
     --slds-c-button-outline-brand-color-border-hover: #0056b4;
 }
 
-.flowButton:last-child {
+.flow-button:last-child {
     padding-right: 0px;
 }
 
 @media only screen and (max-width: 2200px) {
-    .caseResponsiveBtn {
+    .case-responsive-button {
         height: 2.5rem; /* Set a fixed height for buttons on smaller screens */
         line-height: 1.2; /* Reduce space between lines on smaller screens */
         padding: 4px;
@@ -33,7 +33,7 @@
 }
 
 @media only screen and (max-width: 1920px) {
-    .threadResponsiveBtn {
+    .thread-responsive-button {
         height: 2rem;
         line-height: 1.2;
         padding: 4px;
