conditional render based on url validity

--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
@@ -5,6 +5,10 @@
 }
 .text-center {
     text-align: center;
+    background-color: #fff;
+    display: block;
+    padding: 1rem 1rem 1rem 1rem;
+    border-radius: 4px;
 }
 .inputarea {
     margin-bottom: 2em;
@@ -12,11 +16,6 @@
 .ficon {
     margin: 1em;
     height: 2em;
-}
-.johnny {
-    width: 25%;
-    float: right;
-    margin-top: 1em;
 }
 .headlineholder {
     display: flow-root;
@@ -34,6 +33,7 @@
 .sendbutton {
     margin-top: 1em;
     justify-content: center;
+    padding: calc(0.475rem - 1px) 2.5rem calc(0.525rem - 1px) 2.5rem;
 }
 .logo {
     margin: 1em;
@@ -106,7 +106,11 @@
     --override-border-bottom-right-radius: 0px;
 }
 
-.leftAlign {
+.leftAlign,
+.errorSummary,
+.pleiepenger,
+.medskrive,
+.betingelser-div {
     text-align: left;
 }
 
@@ -122,6 +126,18 @@
     display: flex;
     justify-content: center;
     gap: 16px;
+}
+
+.top-div {
+    margin-bottom: 4rem;
+}
+
+.theme-header {
+    color: #0067c5;
+}
+
+.helptext {
+    margin-left: 16px;
 }
 
 @media only screen and (max-width: 576px) {
@@ -140,15 +156,6 @@
     .btnPositioning > *:first-child {
         margin-bottom: 16px;
     }
-}
-
-.testClass {
-    background: none;
-}
-
-.testClass:active,
-.testClass:focus {
-    background: initial;
 }
 
 .ingress {
