--- a/force-app/main/default/lwc/communityCheckbox/communityCheckbox.css
+++ b/force-app/main/default/lwc/communityCheckbox/communityCheckbox.css
@@ -2,5 +2,9 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
+}
+
+.icon-padding {
+    padding-top: 0.15rem;
 }
