--- a/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.css
+++ b/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.css
@@ -7,3 +7,9 @@
     padding-bottom: 1rem;
     padding-top: 1.5rem;
 }
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
