replaced button component with normal html buttons

--- a/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
+++ b/force-app/main/default/lwc/stoMessagingContainer/stoMessagingContainer.css
@@ -21,3 +21,13 @@
 .button-container {
     gap: 0.5rem;
 }
+
+.button-heights {
+    height: 100%;
+    line-height: var(--slds-g-font-lineheight-2, 1.25);
+}
+
+.button-spacing {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
