--- a/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.css
+++ b/force-app/main/default/lwc/threadExpandedTimeline/threadExpandedTimeline.css
@@ -7,3 +7,8 @@
     padding-bottom: 1rem;
     padding-top: 1.5rem;
 }
+
+.button-spacing {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
