--- a/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
+++ b/force-app/main/default/lwc/stoRegisterThread/registerThreadTemplate.css
@@ -1,10 +1,10 @@
 .header {
-    text-align: center;
+    text-align: cenleftter;
     width: 100%;
     margin-bottom: 1em;
 }
 .text-center {
-    text-align: center;
+    text-align: left;
     background-color: #fff;
     display: block;
     padding: 1rem 1rem 1rem 1rem;
@@ -33,10 +33,6 @@
 .sendbutton {
     margin-top: 1em;
     justify-content: center;
-    padding: calc(0.475rem - 1px) 2.5rem calc(0.525rem - 1px) 2.5rem;
-}
-.logo {
-    margin: 1em;
 }
 .typo-undertittel_farge {
     color: #0067c5;
@@ -71,12 +67,6 @@
 
 .feilBoks {
     border: var(--navds-global-color-nav-red) solid 3px;
-}
-
-.checkbox {
-    display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    justify-items: center;
 }
 
 .checkbox c-community-checkbox {
